# squish

./: .pre-commit-config.yaml  Cargo.toml
.claude/: settings.local.json
.github/workflows/: ci.yml  release.yml
crates/qssh/: Cargo.toml
crates/qssh-core/: Cargo.toml
crates/qssh-core/src/: error.rs  lib.rs
crates/qssh-core/src/auth/: challenge.rs  fingerprint.rs  keys.rs  mod.rs
crates/qssh-core/src/proto/: channel.rs  codec.rs  message.rs  mod.rs
crates/qssh-core/src/transport/: framing.rs
crates/qssh-core/tests/: integration.rs
crates/qssh/src/: auth.rs  config.rs  connection.rs  control.rs  known_hosts.rs  lib.rs  main.rs  migration.rs  target.rs
crates/qssh/src/bootstrap/: detect.rs  keys.rs  mod.rs  service.rs  ssh.rs
crates/qssh/src/channel/: forward.rs  session.rs
crates/qsshd/: Cargo.toml
crates/qsshd/src/: config.rs  connection.rs  keys.rs  listener.rs  main.rs
crates/qsshd/src/channel/: forward.rs  session.rs
crates/sqsh/: Cargo.toml
crates/sqsh-core/: Cargo.toml
crates/sqsh-core/src/: error.rs
crates/sqsh-core/src/auth/: challenge.rs  keys.rs
crates/sqsh-core/src/channel/: state.rs
crates/sqsh-core/src/proto/: channel.rs  codec.rs  message.rs
crates/sqsh-core/src/transport/: framing.rs
crates/sqsh-core/tests/: integration.rs
crates/sqsh/src/: auth.rs  config.rs  connection.rs  control.rs  known_hosts.rs  lib.rs  main.rs  sftp.rs  target.rs
crates/sqsh/src/bootstrap/: detect.rs  keys.rs  mod.rs  service.rs  ssh.rs
crates/sqsh/src/channel/: forward.rs  session.rs
crates/sqshd/: Cargo.toml
crates/sqshd/src/: config.rs  connection.rs  keys.rs  listener.rs  main.rs
crates/sqshd/src/channel/: forward.rs  session.rs
debian/: README.source  changelog  control  copyright  rules  squishd.postinst  squishd.postrm
docs/: README.md  client.md  protocol.md  server.md  tooling.md
packaging/debian/: qsshd.service  qsshd.toml  sqshd.service  sqshd.toml
packaging/debian/scripts/: postinst  postrm  prerm
packaging/homebrew/: squish.rb
tests/lxd/: integration.sh
tools/: check-commit-msg.py
