[package]
name = "qssh"
version.workspace = true
edition.workspace = true
description = "Post-quantum SSH client over QUIC"

[dependencies]
qssh-core.workspace = true

# QUIC / TLS
quinn.workspace = true
rustls.workspace = true

# Async
tokio.workspace = true
tokio-util.workspace = true

# Terminal
crossterm = "0.28"

# Network change detection
if-watch = { version = "3", features = ["tokio"] }

# CLI / config
clap.workspace = true
toml.workspace = true
serde.workspace = true

# Logging
tracing.workspace = true
tracing-subscriber.workspace = true

# Error handling
anyhow.workspace = true

# Crypto (for auth signing)
ml-dsa.workspace = true
signature.workspace = true
rand.workspace = true
zeroize.workspace = true
sha2.workspace = true

# Encoding
base64.workspace = true
hex.workspace = true
minisign-verify = "0.2.5"
tempfile.workspace = true
[package.metadata.deb]
name = "squish"
maintainer = "Alex Lewontin <alex.c.lewontin@gmail.com>"
copyright = "2026, Alex Lewontin"
section = "net"
priority = "optional"
depends = "$auto"
assets = [
  ["target/release/qssh", "usr/bin/qssh", "755"],
  ["target/release/qssh-bootstrap", "usr/bin/qssh-bootstrap", "755"],
  ["target/release/qssh-keygen", "usr/bin/qssh-keygen", "755"],
]
