[package]
name = "qsshd"
version.workspace = true
edition.workspace = true
description = "Post-quantum SSH server daemon over QUIC"

[dependencies]
qssh-core.workspace = true

# QUIC / TLS
quinn.workspace = true
rustls.workspace = true

# Async
tokio.workspace = true
tokio-util.workspace = true

# PTY / process
nix = { version = "0.29", features = ["ioctl", "process", "signal", "term", "user"] }
libc = "0.2"

# CLI / config
clap.workspace = true
toml.workspace = true
serde.workspace = true

# Logging
tracing.workspace = true
tracing-subscriber.workspace = true

# Error handling
anyhow.workspace = true

# Key generation
rcgen = "0.13"
rand.workspace = true

# Post-quantum auth verification
ml-dsa.workspace = true
signature.workspace = true

# Encoding / cert parsing
rustls-pemfile.workspace = true
hex.workspace = true

[package.metadata.deb]
name = "squishd"
maintainer = "Alex Lewontin <alex.c.lewontin@gmail.com>"
copyright = "2026, Alex Lewontin"
section = "net"
priority = "optional"
depends = "$auto"
conf-files = ["/etc/qssh/qsshd.toml"]
maintainer-scripts = "../../packaging/debian/scripts"
assets = [
  ["target/release/qsshd", "usr/bin/qsshd", "755"],
  ["../../packaging/debian/qsshd.service", "lib/systemd/system/qsshd.service", "644"],
  ["../../packaging/debian/qsshd.toml", "etc/qssh/qsshd.toml", "644"],
]
