[package]
name = "sqshd"
version.workspace = true
edition.workspace = true
description = "Post-quantum SSH server daemon over QUIC"

[dependencies]
sqsh-core.workspace = true

# QUIC / TLS
quinn.workspace = true
rustls.workspace = true

# Async
tokio.workspace = true
tokio-util.workspace = true

# PTY / process
nix = { version = "0.30", features = ["fs", "ioctl", "process", "signal", "term", "user"] }
libc = "0.2"

# CLI / config
clap.workspace = true
toml.workspace = true
serde.workspace = true

# Logging
tracing.workspace = true
tracing-subscriber.workspace = true

# Error handling
anyhow.workspace = true

# Key generation
rcgen = "0.13"
rand.workspace = true

# Post-quantum auth verification
ml-dsa.workspace = true
signature.workspace = true

# Encoding / cert parsing
rustls-pemfile.workspace = true
hex.workspace = true
